feat: Remove upvotes/downvotes
