# internal/posts/ports/openapi_api.gen.go
@@ -31,8 +31,14 @@ type ServerInterface interface {
 	// (GET /posts/{postId})
 	GetPost(w http.ResponseWriter, r *http.Request, postId openapi_types.UUID)
 
+	// (DELETE /posts/{postId}/downvote)
+	RemoveDownvote(w http.ResponseWriter, r *http.Request, postId openapi_types.UUID)
+
 	// (POST /posts/{postId}/downvote)
 	DownvotePost(w http.ResponseWriter, r *http.Request, postId openapi_types.UUID)
+
+	// (DELETE /posts/{postId}/upvote)
+	RemoveUpvote(w http.ResponseWriter, r *http.Request, postId openapi_types.UUID)
 
 	// (POST /posts/{postId}/upvote)
 	UpvotePost(w http.ResponseWriter, r *http.Request, postId openapi_types.UUID)
@@ -67,8 +73,18 @@ func (_ Unimplemented) GetPost(w http.ResponseWriter, r *http.Request, postId op
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
+// (DELETE /posts/{postId}/downvote)
+func (_ Unimplemented) RemoveDownvote(w http.ResponseWriter, r *http.Request, postId openapi_types.UUID) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
 // (POST /posts/{postId}/downvote)
 func (_ Unimplemented) DownvotePost(w http.ResponseWriter, r *http.Request, postId openapi_types.UUID) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// (DELETE /posts/{postId}/upvote)
+func (_ Unimplemented) RemoveUpvote(w http.ResponseWriter, r *http.Request, postId openapi_types.UUID) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
@@ -246,6 +262,34 @@ func (siw *ServerInterfaceWrapper) GetPost(w http.ResponseWriter, r *http.Reques
 	handler.ServeHTTP(w, r.WithContext(ctx))
 }
 
+// RemoveDownvote operation middleware
+func (siw *ServerInterfaceWrapper) RemoveDownvote(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var err error
+
+	// ------------- Path parameter "postId" -------------
+	var postId openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "postId", runtime.ParamLocationPath, chi.URLParam(r, "postId"), &postId)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "postId", Err: err})
+		return
+	}
+
+	ctx = context.WithValue(ctx, BearerAuthScopes, []string{})
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.RemoveDownvote(w, r, postId)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
 // DownvotePost operation middleware
 func (siw *ServerInterfaceWrapper) DownvotePost(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
@@ -265,6 +309,34 @@ func (siw *ServerInterfaceWrapper) DownvotePost(w http.ResponseWriter, r *http.R
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.DownvotePost(w, r, postId)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
+// RemoveUpvote operation middleware
+func (siw *ServerInterfaceWrapper) RemoveUpvote(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var err error
+
+	// ------------- Path parameter "postId" -------------
+	var postId openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "postId", runtime.ParamLocationPath, chi.URLParam(r, "postId"), &postId)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "postId", Err: err})
+		return
+	}
+
+	ctx = context.WithValue(ctx, BearerAuthScopes, []string{})
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.RemoveUpvote(w, r, postId)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -431,7 +503,13 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 		r.Get(options.BaseURL+"/posts/{postId}", wrapper.GetPost)
 	})
 	r.Group(func(r chi.Router) {
+		r.Delete(options.BaseURL+"/posts/{postId}/downvote", wrapper.RemoveDownvote)
+	})
+	r.Group(func(r chi.Router) {
 		r.Post(options.BaseURL+"/posts/{postId}/downvote", wrapper.DownvotePost)
+	})
+	r.Group(func(r chi.Router) {
+		r.Delete(options.BaseURL+"/posts/{postId}/upvote", wrapper.RemoveUpvote)
 	})
 	r.Group(func(r chi.Router) {
 		r.Post(options.BaseURL+"/posts/{postId}/upvote", wrapper.UpvotePost)
